--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,14 +4,15 @@
     "commonjs": true,
     "es2020": true
   },
-  "extends": ["plugin:prettier/recommended", "airbnb-base"],
+  "extends": [ "airbnb-base"],
   "parserOptions": {
     "ecmaVersion": 11
   },
   "rules": {
     "prettier/prettier": "off",
     "no-console": "off",
+    "linebreak-style": "off",
     "no-unused-vars":"off"
   },
-  "plugins": ["prettier"]
+  "plugins": []
 }
