--- a/package.json
+++ b/package.json
@@ -4,21 +4,30 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/index.js",
+    "start": "webpack --config webpack.config.js",
     "dev": "nodemon src/index.js",
-    "build": "node src/index.js"
+    "build": "webpack --config webpack.config.js"
   },
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.23.2",
+    "@babel/preset-env": "^7.23.2",
+    "@webpack-cli/generators": "^3.0.7",
+    "babel-loader": "^9.1.3",
     "eslint": "latest",
     "eslint-config-airbnb-base": "latest",
     "eslint-config-prettier": "latest",
     "eslint-plugin-import": "latest",
     "eslint-plugin-prettier": "latest",
+    "html-webpack-plugin": "^5.5.3",
     "nodemon": "latest",
     "prettier": "latest",
-    "prisma": "^5.4.2"
+    "prisma": "^5.4.2",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1",
+    "workbox-webpack-plugin": "^7.0.0"
   },
   "dependencies": {
     "@prisma/client": "^5.4.2",
