--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "start": "webpack --config webpack.config.js",
+    "start": "node src/index.js",
     "dev": "nodemon src/index.js",
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack --config webpack.config.js",
+    "vercel:build": "echo Server Starting.."
   },
   "author": "",
   "license": "MIT",
