--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node src/index.js",
     "dev": "nodemon src/index.js",
     "build": "webpack --config webpack.config.js",
-    "vercel:build": "echo Server Starting.."
+    "vercel-build": "echo Server Starting.."
   },
   "author": "",
   "license": "MIT",
